tests/expectations/compiler/integers/i64/max_fail.out
Error [ETYC0372008]: The value 9223372036854775808 is not a valid `i64`
    --> compiler-test:4:18
     |
   4 |     let a: i64 = 9223372036854775808i64;
     |                  ^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:2:9
     |
   2 | program test.aleo { }
     |         ^^^^^^^^^
